--- a/src/components/components.css
+++ b/src/components/components.css
@@ -1,3 +1,179 @@
-.background {
-    background-image: url(../img/hero-bg.jpg);
+.image {
+    background-image: url(/public/img/hero-bg.jpg);
+    background-size: cover;
+    height: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 3%;
+}
+
+.language {
+    background-color: #e7e7e7;
+    border-radius: 5px;
+    overflow: hidden;
+    height: 20px;
+}
+.level {
+    height: 100%;
+
+}
+.blog.img {
+    border-radius: 10px 10px 0px 0px;
+}
+.skills img {
+    border-radius: 10px;
+    margin-top: 10%;
+}
+.col-md-5 {
+    margin: 2%;
+    display: flex;
+    flex-direction: column;
+}
+.row {
+    display: flexbox;
+    align-items: center;
+    justify-content: center;
+
+}
+.shadow {
+    display: flex;
+    margin: 10%;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    box-shadow: #444;
+}
+
+
+/* Articles */
+
+.blog {
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0px 0px 0px 2px rgba(0,0, 0, 0,3);
+    align-items: center;
+    flex-direction: column;
+    display: flex;
+    padding: 40px;
+}
+
+.conteneur {
+    display: block;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+/*Footer*/
+
+.credit {
+    background-color: #444;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items:end;
+}
+.credit p {
+    margin: 15px;
+}
+.contfoot li {
+    color: black;
+    text-decoration: none;
+    list-style: disclosure-closed; 
+    font-size: larger;
+    
+}
+/* Portfolio */
+
+.realisation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: #e7e7e7 solid;
+    border-radius: 10px;
+}
+.portfoliotitre {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.line {
+    border: #0d6efd solid;
+    height: 2px;
+    width: 20%;
+    margin: 1%;
+
+}
+
+/* blog */
+
+.card img {
+    margin-top: 10px;
+}
+.card button {
+    width: 30%;
+}
+.blogtitre {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+
+}
+
+/* contact */
+
+.formulaire {
+   margin-bottom: 10px;
+    align-items: center;
+    width: 80%;
+    background-color: white;
+    margin-top: 20px;
+    border-radius: 20px;
+    display: block;
+    justify-content: center;
+    flex-direction: column;
+}
+.bg-img-contact {
+    background-image: url(/public/img/contact-bg.jpg);
+    background-size: cover;
+    background-color: rgba (0,
+    105, 255, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/* services */
+.servicetitre {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+.icone {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.icone img{
+    width: 150px;
+    height: 150px;   
+}
+/* mention L */
+.mentionstitre {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center       ;                                                                                                                                                                                                                                                                                                                                                                            
+}
+.accordion {
+    width: 80%;
 }
