--- a/src/components/components.css
+++ b/src/components/components.css
@@ -5,6 +5,10 @@
 .navbar-brand {
     margin-left: 30px;
 }
+.navbar-brand:hover {
+    background-color: #298eff;
+}
+
 .navbar ul {
     list-style: none;
     padding: 0;
@@ -40,7 +44,9 @@
     color: inherit;
 }
 .navbar__link:hover {
-    background-color: #cde1f8;
+    background-color: rgba(100%,100%,100%,0.8);
+    
+    
 }
 
 
@@ -78,7 +84,6 @@
     flex-direction: column;
 }
 .row {
-    display: flexbox;
     align-items: center;
     justify-content: center;
 
@@ -89,7 +94,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 10px;
-    box-shadow: #444;
+    box-shadow: 5px 5px;
 }
 
 
@@ -98,7 +103,7 @@
 .blog {
     height: auto;
     border-radius: 10px;
-    box-shadow: 0px 0px 0px 2px rgba(0,0, 0, 0,3);
+    box-shadow: 0px 0px 0px 2px rgba(0,0, 0,0.3);
     align-items: center;
     flex-direction: column;
     display: flex;
@@ -115,7 +120,6 @@
 /*Footer*/
 .social {
     display: block;
-    flex-direction: wrap;
     margin: 0;
     width: 120px; 
     height: 100px;
@@ -202,8 +206,7 @@
 .bg-img-contact {
     background-image: url(/public/img/contact-bg.jpg);
     background-size: cover;
-    background-color: rgba (0,
-    105, 255, 0.5);
+    background-color: rgba(0,105, 255, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -243,7 +246,7 @@
 
 /* responsive */
 
-@media (max-width: 999px) and (min-width: 701) {
+@media (max-width: 999px) and (min-width: 701px) {
     .image {
         background-image: url(/public/img/hero-bg-tablette.jpg);
 }
